background and text color changes

--- a/(home)re.css
+++ b/(home)re.css
@@ -8,7 +8,7 @@ body {
 }
 .mainbody {
     background-color: rgb(23, 38, 255);
-    /*background-image: url(https://storage.googleapis.com/derswebsitebucket/Backgrounds/websitebackgroundred%3Ayellow%2Bmore.png);*/
+    background-image: url(https://storage.googleapis.com/derswebsitebucket/Backgrounds/darkblueribbon.png);
     background-attachment:fixed;
     background-repeat: no-repeat;
     background-size: cover;
