--- a/(pages)re.css
+++ b/(pages)re.css
@@ -8,7 +8,7 @@ body {
 }
 .bodytag {
     background-color: rgb(23, 38, 255);
-    /*background-image: url(https://storage.googleapis.com/derswebsitebucket/Backgrounds/websitebackgroundred%3Ayellow%2Bmore.png);*/
+    background-image: url(https://storage.googleapis.com/derswebsitebucket/Backgrounds/darkblueribbon.png);
     background-attachment:fixed;
     background-repeat: no-repeat;
     background-size: cover;
@@ -55,7 +55,7 @@ body {
 .kaledotext { /*This is for the text in the left box with the images*/
     font-size: 30px;
     font-family: "Lilita One";
-    color: rgb(255, 44, 44);
+    color: rgb(0, 0, 123);
     align-self: flex-start;
     margin-left: 20px;
 }
@@ -142,11 +142,11 @@ svg {
 /*logos on contact pages*/
 .logos {
     font-size: 100px;
-    color: rgb(255, 44, 44);
+    color:rgb(0, 0, 123);
     transition: color 0.5s;
 }
 .logos:hover {
-    color: rgb(0, 255, 145);
+    color: rgb(255, 44, 44);
 }
 .logogroup {
     display: flex;
@@ -157,18 +157,18 @@ svg {
 .contactinfo {
     font-size: 20px;
     font-family: "Lilita One";
-    color: rgb(255, 44, 44);
+    color: rgb(0, 0, 123);
     text-align: center;
 }
 /* Font Decoration */
 .bottomtextbox a {
     color: rgb(212, 215, 255);
     text-decoration: none;
-    transition: color 0.5s;
-    cursor: help;
+    text-shadow: 4px 4px rgb(0, 0, 123);
 }
 .bottomtextbox a:hover {
-    color: rgb(0, 0, 123);
+    text-shadow: 4px 4px rgb(255, 44, 44);
+    transition: text-shadow 0.5s;
 }
 .navtext {
     color: rgb(23, 38, 255);
