--- a/(home)re.css
+++ b/(home)re.css
@@ -100,15 +100,17 @@ svg {
     display: flex;
     width: 600px;
     flex-direction: column;
+    align-items:start;
+    justify-content: center;
 }
-.imgholster {
+.homemodel{
+    width: 600px;
+    height: 400px;
+    }
+model-viewer{
     height: 100%;
-}
-.titlecard {
-    height: auto;
-    width: 90%; 
-    margin-top: 200px;
-}
+    width: auto;
+    }
 /*this is for the button decoration*/
 .navtext {
     text-decoration: none;
