--- a/(home)re.css
+++ b/(home)re.css
@@ -125,8 +125,9 @@ model-viewer{
     }
     .papaflex {
         flex-direction: column-reverse;
-        width: 153vw;
-        height: 155vh;
+        height: 100%;
+        width: auto;
+        justify-content: space-between;
     }
     .nametext {
         font-size: 100px;
@@ -135,21 +136,8 @@ model-viewer{
         text-align: center;
         margin-top: 0px;
     }
-    .imgholster {
-        margin-bottom: 0px;
-        justify-content: center;
+    .mainbody{
+        overflow: scroll;
     }
-    .homeaside {
-        justify-content: end;
-    }
-  }
-  @media only screen and (max-width: 1300px) {
-    .textcontainer {
-        margin-top: 200px;
-    }
-    .titlecard {
-        margin-top: 100px;
-    }
-    
   }
 
