--- a/(home)re.css
+++ b/(home)re.css
@@ -62,6 +62,15 @@ body {
     border-radius: 15px;
     cursor: grab;
 }
+.navgone {
+    display: none;
+    color: red;
+    text-decoration: none;
+    font-family: "Lilita One";
+    text-align: center;
+    text-shadow: -1px 1px rgb(0, 0, 123);
+    margin-top: 30px;
+}
 svg {
     fill: rgb(0, 0, 123);
 }
@@ -138,6 +147,17 @@ model-viewer{
     }
     .mainbody{
         overflow: auto;
+    }
+    .navbutton {
+        display: none;
+    }
+    .navgone {
+        display: block;
+    }
+    .buttonholder {
+        display: flex;
+        justify-content: center;
+        height: 70px;
     }
   }
 
