--- a/trampled flowers/tfstyle.css
+++ b/trampled flowers/tfstyle.css
@@ -9,7 +9,7 @@ body {
 
 @font-face {
     font-family: 'spikeless';
-    src: url(fonts/Spikeless.ttf);
+    src: url(Spikeless.ttf);
 }
 
 /*header*/
