--- a/trampled flowers/gallery.css
+++ b/trampled flowers/gallery.css
@@ -27,6 +27,12 @@
     max-width: 25%;
     padding: 0 4px;
   }
+  .procolumn {
+    -ms-flex: 33%; 
+    flex: 33%;
+    max-width: 33%;
+    padding: 0 4px;
+  }
   
   .column img {
     margin-top: 8px;
@@ -93,6 +99,7 @@ ul {
     justify-content: center;
     align-items: center;
     height: 30vh;
+    width: 100%;
 }
 
 .pictextholder {
