--- a/trampled flowers/gallery.css
+++ b/trampled flowers/gallery.css
@@ -33,9 +33,14 @@
     max-width: 33%;
     padding: 0 4px;
   }
-  
+
   .column img {
     margin-top: 8px;
+    vertical-align: middle;
+    width: 100%;
+  }
+  .procolumn img {
+    margin-top: 30px;
     vertical-align: middle;
     width: 100%;
   }
@@ -61,7 +66,14 @@
     width: 50%;
     height: auto;
     z-index: 4;
-}
+    transition: 1s;
+  }
+  .navcrest:hover {
+      width: 60%;
+      height: auto;
+      cursor: pointer;
+  }
+
 .sidebarnav {
     width: 100vw;
 }
@@ -113,6 +125,13 @@ ul {
   text-align: center;
   font-size: 3vh;
   font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+}
+.promotextholder {
+  color: rgb(164, 31, 31);
+  text-align: center;
+  font-size: 5vh;
+  font-family: 'spikeless';
+  border-style: solid;
 }
 
   @media screen and (max-width: 800px) {
