--- a/trampled flowers/gallery.css
+++ b/trampled flowers/gallery.css
@@ -40,7 +40,8 @@
     width: 100%;
   }
   .procolumn img {
-    margin-top: 30px;
+    margin-top: 20px;
+    margin-bottom: 20px;
     vertical-align: middle;
     width: 100%;
   }
