--- a/(pages)re.css
+++ b/(pages)re.css
@@ -99,6 +99,17 @@ body {
     animation : donutspin 3s linear infinite;
     margin-bottom: 100px;
 }
+.spanjobtext {
+    display: flex;
+    flex-direction: column;
+    color: black;
+    font-size: 20px;
+    font-family: "Lilita One";
+    margin-top: 400px;
+    margin-left: 100px;
+    text-shadow: 1px 1px rgb(212, 215, 255);
+}
+
 /*this is for the button*/
 .buttonholder {
     display: flex;
