--- a/(home)re.css
+++ b/(home)re.css
@@ -1,164 +1,155 @@
-
-/*body style*/
-body {
-    margin-top: 0%;
-    margin-left: 0%;
-    margin-right: 0%;
-    margin-bottom: 0%;
-}
-
-.mainbody {
-    background-color: rgb(23, 38, 255);
-    background-image: url(https://storage.googleapis.com/derswebsitebucket/Backgrounds/darkblueribbon.png);
-    background-attachment:fixed;
-    background-repeat: no-repeat;
-    background-size: cover;
+/*NavBAR*/
+.topnav {
+    background-color: #000000;
     overflow: hidden;
-}
-/*This flex should cover the screen*/
-.papaflex{
-    display: flex;
-    flex-direction: row;
-    height: 99vh;
-}
-/*for everything in the aside coloum*/
-.homeaside {
-    display: flex;
-    flex: 1;
-    flex-direction: column;
-    justify-content:space-between;
-}
-.textcontainer { /*this is just the box for the two text boxes, aside and name*/
-    display: flex;
-    flex-direction: column;
-    margin-left: 10px;
-    color: rgb(255, 44, 44);
-    text-align: end;
-    margin-top: 270px;
-}
-.asidetext {
-    font-family: "Lilita One";
-    font-size: 30px;
-    text-shadow: -2px 2px rgb(0, 0, 123);
-}
-.nametext {
-    font-size: 140px;
-    text-shadow: -4px 4px rgb(0, 0, 123);
-}
-/*this is for the button*/
-.buttonholder {
-    display: flex;
-    justify-content: start;
-    height: 70px;
-}
-.navbutton {
-    border-style: solid;
-    border-color:  rgb(255, 44, 44);
-    background-color:  rgb(255, 44, 44);
-    height: 40px;
-    margin-top: 10px;
-    margin-left: 10px;
-    height: 40px;
-    width: 40px;
-    border-radius: 15px;
-    cursor: grab;
-}
-.navgone {
-    display: none;
-    color: red;
-    text-decoration: none;
-    font-family: "Lilita One";
+    z-index: 10000;
+    position: fixed;
+   top: 0px;
+   width: 100%;
+  }
+
+  .topnav a {
+    float: right;
+    display: block;
+    color: #f2f2f2;
     text-align: center;
-    text-shadow: -1px 1px rgb(0, 0, 123);
-    margin-top: 30px;
-}
-svg {
-    fill: rgb(0, 0, 123);
-}
-/*this is for the navbar*/
-.sidebar {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    margin-bottom: 7px;
-    margin-left: 7px;
-    height: 300px;
-    width: 690px;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  .topnav a:first-child {
+    float: left;
+  }
+
+  .active {
+    background-color: #86c539;
+    color: white;
+  }
+  
+  .topnav .icon {
     display: none;
-    background-color: rgb(212, 215, 255);
-    border-style: solid;
-    border-color: rgb(0, 0, 123);
-}
-.sidebar li{ /*not entirerly sure why i need this...but it doesnt' work without it*/
-    display: inline-block;
-    font-size: 20px;
-    padding: 20px;
-}
-.navtext {
-    color: rgb(23, 38, 255);
-    text-decoration: none;
-    font-family: "Lilita One";
-}
-.navclose {
-    fill: red;
+  }
+  
+  /*dropdown*/
+  .dropdown {
+    float: right;
+    overflow: hidden;
+  }
+
+  .dropdown .dropbtn {
+    font-size: 17px;
+    border: none;
+    outline: none;
+    color: white;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
+  }
+  
+  .dropdown-content {
+    display: none;
     position: fixed;
-    bottom: 35px;
-    left: 27px;
-}
-/*for everything in the main coloum*/
-.homemain {
-    display: flex;
-    width: 600px;
-    flex-direction: column;
-    align-items:start;
-    justify-content: center;
-}
-.homemodel{
-    width: 600px;
-    height: 400px;
-    }
-model-viewer{
-    height: 100%;
-    width: auto;
-    }
-/*this is for the button decoration*/
-.navtext {
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    float: left;
+    color: black;
     text-decoration: none;
-    transition: color 0.5s;
-}
-.navtext:hover { color:rgb(255, 44, 44); 
-}
-@media only screen and (max-width: 768px) {
-    /* For mobile phones: */
-    .sidebar {
-        width: 400px;
+    display: block;
+    text-align: left;
+  }
+  
+  .topnav a:hover, .dropdown:hover .dropbtn {
+   color: pink;
+  }
+ 
+  .dropdown-content a:hover {
+    color: red;
+  }
+
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+  
+  /* mediaqueries */
+  @media screen and (max-width: 600px) {
+    .topnav a:not(:first-child), .dropdown .dropbtn {
+      display: none;
     }
-    .papaflex {
-        flex-direction: column-reverse;
-        height: 100%;
-        width: auto;
-        justify-content: space-between;
-    }
-    .nametext {
-        font-size: 100px;
-    }
-    .textcontainer {
-        text-align: center;
-        margin-top: 0px;
-    }
-    .mainbody{
-        overflow: auto;
-    }
-    .navbutton {
-        display: none;
-    }
-    .navgone {
-        display: block;
-    }
-    .buttonholder {
-        display: flex;
-        justify-content: center;
-        height: 70px;
+    .topnav a.icon {
+      float: right;
+      display: block;
     }
   }
+  
+  /* javastuff */
+  @media screen and (max-width: 600px) {
+    .topnav.responsive {position: fixed;}
+    .topnav.responsive a.icon {
+      position: absolute;
+      right: 0;
+      top: 0;
+    }
+    .topnav.responsive a {
+      float: none;
+      display: block;
+      text-align: left;
+    }
+    .topnav.responsive .dropdown {float: none;}
+    .topnav.responsive .dropdown-content {position: relative;}
+    .topnav.responsive .dropdown .dropbtn {
+      display: block;
+      width: 100%;
+      text-align: left;
+    }
+  }
+  /* NAVBAR OVER */
+
+
+
+
+  *{
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-weight: 100;
+    font-family: 'Open Sans', sans-serif;
+}
+.parallax{
+    background: url('https://images.pexels.com/photos/192136/pexels-photo-192136.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940') repeat fixed 100%;
+    background-size: cover;
+    color: aliceblue;
+}
+.parallax-1{
+    background: url('https://images.pexels.com/photos/3369569/pexels-photo-3369569.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940') repeat fixed 100%;
+    background-size: cover;
+    color: aliceblue;
+}
+.parallax-2{
+    background: url('https://images.pexels.com/photos/417173/pexels-photo-417173.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940') repeat fixed 100%;
+    background-size: cover;
+    color: aliceblue;
+}
+.parallax-inner{
+    padding-top: 20%;
+    padding-bottom: 20%;
+}
+h3{
+    margin-left: 50px;
+    margin-right: 50px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+h1{
+    font-size: 160px;
+    text-align: center;
+}
+
+
+
 
