--- a/(home)re.css
+++ b/(home)re.css
@@ -1,6 +1,3 @@
-.mainbody {
-    overflow-x: hidden;
-}
 
 /*NavBAR*/
 .topnav {
@@ -125,17 +122,17 @@
     font-family: 'Open Sans', sans-serif;
 }
 .parallax{
-    background: url('https://images.pexels.com/photos/192136/pexels-photo-192136.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940') repeat fixed 100%;
+    background: url(https://storage.googleapis.com/derswebsitebucket/Backgrounds/jacketshoulderexp.jpg) repeat fixed 100%;
     background-size: cover;
     color: aliceblue;
 }
 .parallax-1{
-    background: url('https://images.pexels.com/photos/3369569/pexels-photo-3369569.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940') repeat fixed 100%;
+    background: url(https://storage.googleapis.com/derswebsitebucket/Backgrounds/headphonesexp.jpg) repeat fixed 100%;
     background-size: cover;
     color: aliceblue;
 }
 .parallax-2{
-    background: url('https://images.pexels.com/photos/417173/pexels-photo-417173.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940') repeat fixed 100%;
+    background: url(https://storage.googleapis.com/derswebsitebucket/Backgrounds/truckexp.jpg) repeat fixed 100%;
     background-size: cover;
     color: aliceblue;
 }
@@ -153,6 +150,28 @@ h1{
     font-size: 160px;
     text-align: center;
 }
+
+
+@media screen and (max-width: 600px) {
+  .parallax {
+    background: url(https://storage.googleapis.com/derswebsitebucket/Backgrounds/jacketshoulderexp%20mobile.jpg) repeat fixed 100%;
+    background-size:cover;
+    background-position: center center;
+  }
+
+  .parallax-1 {
+    background: url(https://storage.googleapis.com/derswebsitebucket/Backgrounds/headphonesexp%20rename.jpg) repeat fixed 100%;
+    background-size:cover;
+    background-position: center center;
+  }
+
+  .parallax-2 {
+    background: url(https://storage.googleapis.com/derswebsitebucket/Backgrounds/truckexp%20mobile.jpg) repeat fixed 100%;
+    background-size:cover;
+    background-position: center center;
+  }
+}
+
 
 
 
