--- a/(home)re.css
+++ b/(home)re.css
@@ -23,9 +23,9 @@
   }
 
   .active {
-    background-color: #86c539;
-    color: white;
+    background-color: black;
   }
+  
   
   .topnav .icon {
     display: none;
