lotta nav, parallax, and mobile fixes

--- a/(home)re.css
+++ b/(home)re.css
@@ -1,4 +1,6 @@
-
+body {
+  background-color: black;
+}
 /*NavBAR*/
 .topnav {
     background-color: #000000;
@@ -20,10 +22,16 @@
   }
   .topnav a:first-child {
     float: left;
+    padding: 0px 0px;
   }
 
   .active {
     background-color: black;
+    object-fit: contain;
+  }
+  .derspink {
+    height: 5vh;
+    width: auto;
   }
   
   
@@ -47,30 +55,35 @@
     font-family: inherit;
     margin: 0;
   }
-  
+
   .dropdown-content {
     display: none;
     position: fixed;
-    background-color: #f9f9f9;
+    background-color: #000000;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
   }
+
+  .dropdown-content a:first-child {
+    padding: 14px 16px;
+  }
   
   .dropdown-content a {
     float: left;
-    color: black;
+    color: rgb(255, 255, 255);
     text-decoration: none;
     display: block;
     text-align: left;
   }
   
   .topnav a:hover, .dropdown:hover .dropbtn {
-   color: pink;
+    color: rgb(255, 159, 197);
+    cursor: pointer;
   }
  
   .dropdown-content a:hover {
-    color: red;
+    color: rgb(255, 159, 197);
   }
 
   .dropdown:hover .dropdown-content {
@@ -85,6 +98,9 @@
     .topnav a.icon {
       float: right;
       display: block;
+    }
+    .dropdown-content {
+      background-color: #131313;
     }
   }
   
@@ -140,15 +156,53 @@
     padding-top: 20%;
     padding-bottom: 20%;
 }
+
 h3{
-    margin-left: 50px;
-    margin-right: 50px;
-    margin-top: 50px;
-    margin-bottom: 50px;
+  margin-left: 50px;
+  margin-right: 50px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  color: white;
+  font-size: 25px;
 }
+
+.buttdiv {
+  width:100%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.bttbutt {
+  margin-left: 50px;
+  margin-right: 50px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  color: white;
+  font-size: 25px;
+  text-decoration: none;
+}
+
 h1{
     font-size: 160px;
     text-align: center;
+    opacity: 0;
+}
+.logopageholder {
+  width: 90%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.logopage {
+  width: 30vw;
+  height: auto;
+  margin-left: 50px;
+  margin-right: 50px;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
 
 
@@ -170,6 +224,20 @@ h1{
     background-size:cover;
     background-position: center center;
   }
+
+  .logopage {
+    width: 60vw;
+    height: auto;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+
+  .parallax-inner{
+    padding-top: 60%;
+    padding-bottom: 60%;
+}
 }
 
 
