--- a/(home)re.css
+++ b/(home)re.css
@@ -80,6 +80,7 @@ body {
   .topnav a:hover, .dropdown:hover .dropbtn {
     color: rgb(255, 159, 197);
     cursor: pointer;
+    transition: .7s;
   }
  
   .dropdown-content a:hover {
@@ -138,7 +139,7 @@ body {
     font-family: 'Open Sans', sans-serif;
 }
 .parallax{
-    background: url(https://storage.googleapis.com/derswebsitebucket/Backgrounds/jacketshoulderexp.jpg) repeat fixed 100%;
+    background: url(https://storage.googleapis.com/derswebsitebucket/Backgrounds/jacketpapa.jpg) repeat fixed 100%;
     background-size: cover;
     color: aliceblue;
 }
@@ -164,6 +165,7 @@ h3{
   margin-bottom: 50px;
   color: white;
   font-size: 25px;
+  text-align: center;
 }
 
 .buttdiv {
