--- a/(pages)re.css
+++ b/(pages)re.css
@@ -1,223 +1,209 @@
-
-/*body style*/
 body {
-    margin-top: 0%;
-    margin-left: 0%;
-    margin-right: 0%;
-    margin-bottom: 0%;
-}
-.bodytag {
-    background-color: rgb(23, 38, 255);
-    background-image: url(https://storage.googleapis.com/derswebsitebucket/Backgrounds/darkblueribbon.png);
-    background-attachment:fixed;
-    background-repeat: no-repeat;
-    background-size: cover;
-    overflow: auto;
-}
-/*This flex should cover the screen*/
-.biggestflex {
-    display: flex;
-    flex-direction: row;
-}
-/*Box on the left...duh*/
-.bigboxleft {
-    display: flex;
-    flex-direction: column;
-    width: 880px;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    row-gap: 10px;
-    column-gap: 20px;
-    margin-top: 20px;
-    margin-bottom: 10px;
-}
-.rowbox { /*This is for the row of images inside the left obx*/
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    gap: 30px
-}
-.resumeimage { /*This one is just the resume page*/
-    height: 650px;
-}
-.bigresumeimage{
-    height: auto;
-}
-.multimage { /*This is all pages with mulitple images that use rows and rowbox*/
-    max-width: 30%;
-    height: auto;
-}
-.multimagetxmi { /*This is all pages that use only column layout, no rowbox*/
-    max-width: 70%;
-    height: auto;
-}
-.kaledotext { /*This is for the text in the left box with the images*/
-    font-size: 30px;
-    font-family: "Lilita One";
-    color: rgb(0, 0, 123);
-    align-self: flex-start;
-    margin-left: 20px;
-    text-shadow: 1px 1px rgb(212, 215, 255);
-}
-/*box on the right*/
-.bigboxright {
-    display: flex;
-    width: 600px;
-    height: 99vh;
-    flex-direction: column;
-    justify-content: space-between;
-    margin-right: 10px;
-}
-.toptextbox {
-    display: flex;
-    flex-direction: column;
-    color: rgb(255, 44, 44);
-    font-size: 150px;
-    font-family: "Lilita One";
-    align-items: flex-end;
-    text-shadow: 4px 4px rgb(0, 0, 123);
-}
-.bottomtextbox {
-    display: flex;
-    flex-direction: column;
-    color: pink;
-    font-size: 50px;
-    font-family: "Lilita One";
-}
-@keyframes donutspin {
-    0% { transform: rotate(0deg); }
-    20% { transform: rotate(340deg); }
-    100% { transform: rotate(390deg); }
-}
-.bottomtextboxdonut {
-    display: flex;
-    flex-direction: column;
-    color: pink;
-    font-size: 50px;
-    font-family: "Lilita One";
-    animation : donutspin 3s linear infinite;
-    margin-bottom: 100px;
-}
-.spanjobtext {
-    display: flex;
-    flex-direction: column;
-    color: black;
-    font-size: 20px;
-    font-family: "Lilita One";
-    margin-top: 400px;
-    margin-left: 100px;
-    text-shadow: 1px 1px rgb(212, 215, 255);
-}
-
-/*this is for the button*/
-.buttonholder {
-    display: flex;
-    justify-content: end;
-    height: 70px;
-    position: fixed;
-    bottom: 5px;
-    right: 5px;
-    z-index: 9;
-}
-.navbutton {
-    border-style: solid;
-    border-color: rgb(255, 44, 44);
-    background-color: rgb(255, 44, 44);
-    height: 40px;
-    margin-top: 10px;
-    margin-right: 10px;
-    height: 40px;
-    width: 40px;
-    border-radius: 15px;
-    cursor: grab;
-}
-svg {
-    fill: rgb(0, 0, 123);
-}
-/*this is for the navbar*/
-.sidebar {
-    position: fixed;
-    bottom: 0;
-    right: 0;
-    margin-bottom: 7px;
-    margin-right: 7px;
-    height: 300px;
-    width: 490px;
-    display: none;
-    background-color: rgb(212, 215, 255);
-    border-style: solid;
-    border-color: rgb(0, 0, 123);
-    z-index: 10;
-}
-.sidebar li{ /*not entirerly sure why i need this...but it doesnt' work without it*/
-    display: inline-block;
-    font-size: 20px;
-    padding: 20px;
-}
-.navtext {
-    text-decoration: none;
-    font-family: "Lilita One";
-}
-.navclose {
-    fill: rgb(255, 44, 44);
-    position: fixed;
-    bottom: 35px;
-    right: 27px;
-}
-/*logos on contact pages*/
-.logos {
-    font-size: 100px;
-    color:rgb(255, 44, 44);
-    transition: color 0.5s;
-}
-.logos:hover {
-    color: rgb(0, 0, 123);
-}
-.logogroup {
-    display: flex;
-    flex-direction: row;
-    gap: 30px
-}
-/*this is for the contact page text*/
-.contactinfo {
-    font-size: 20px;
-    font-family: "Lilita One";
-    color: rgb(0, 0, 123);
-    text-align: center;
-}
-/* Font Decoration */
-.bottomtextbox a {
-    color: rgb(212, 215, 255);
-    text-decoration: none;
-    text-shadow: 4px 4px rgb(0, 0, 123);
-}
-.bottomtextbox a:hover {
-    text-shadow: 4px 4px rgb(255, 44, 44);
-    transition: text-shadow 0.5s;
-}
-.navtext {
-    color: rgb(23, 38, 255);
-    text-decoration: none;
-    transition: color 0.5s;
-}
-.navtext:hover { color:rgb(255, 44, 44); 
-}
-@media only screen and (max-width: 768px) {
-    /* For mobile phones: */
-    .biggestflex {
-        flex-direction: column-reverse;
-        width: 153vw;
-        height: 155vh;
-    }
-    .bigboxleft {
-        width: 153vw;
-        height: 155vh;
-        flex-direction: column-reverse;
-        align-items: center;
-        margin-top: 0px;
-    }
-    .toptextbox {
-        align-items: center;
-    }
+    background-color: black;
   }
+  /*NavBAR*/
+  .topnav {
+      background-color: #000000;
+      overflow: hidden;
+      z-index: 10000;
+      position: fixed;
+     top: 0px;
+     width: 100%;
+    }
+  
+    .topnav a {
+      float: right;
+      display: block;
+      color: #f2f2f2;
+      text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
+      font-size: 17px;
+    }
+    .topnav a:first-child {
+      float: left;
+      padding: 0px 0px;
+    }
+  
+    .active {
+      background-color: black;
+      object-fit: contain;
+    }
+    .derspink {
+      height: 5vh;
+      width: auto;
+    }
+    
+    
+    .topnav .icon {
+      display: none;
+    }
+    
+    /*dropdown*/
+    .dropdown {
+      float: right;
+      overflow: hidden;
+    }
+  
+    .dropdown .dropbtn {
+      font-size: 17px;
+      border: none;
+      outline: none;
+      color: white;
+      padding: 14px 16px;
+      background-color: inherit;
+      font-family: inherit;
+      margin: 0;
+    }
+  
+    .dropdown-content {
+      display: none;
+      position: fixed;
+      background-color: #000000;
+      min-width: 160px;
+      box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+      z-index: 1;
+    }
+  
+    .dropdown-content a:first-child {
+      padding: 14px 16px;
+    }
+    
+    .dropdown-content a {
+      float: left;
+      color: rgb(255, 255, 255);
+      text-decoration: none;
+      display: block;
+      text-align: left;
+    }
+    
+    .topnav a:hover, .dropdown:hover .dropbtn {
+      color: rgb(255, 159, 197);
+      cursor: pointer;
+      transition: .7s;
+    }
+   
+    .dropdown-content a:hover {
+      color: rgb(255, 159, 197);
+    }
+  
+    .dropdown:hover .dropdown-content {
+      display: block;
+    }
+    
+    /* mediaqueries */
+    @media screen and (max-width: 600px) {
+      .topnav a:not(:first-child), .dropdown .dropbtn {
+        display: none;
+      }
+      .topnav a.icon {
+        float: right;
+        display: block;
+      }
+      .dropdown-content {
+        background-color: #131313;
+      }
+    }
+    
+    /* javastuff */
+    @media screen and (max-width: 600px) {
+      .topnav.responsive {position: fixed;}
+      .topnav.responsive a.icon {
+        position: absolute;
+        right: 0;
+        top: 0;
+      }
+      .topnav.responsive a {
+        float: none;
+        display: block;
+        text-align: left;
+      }
+      .topnav.responsive .dropdown {float: none;}
+      .topnav.responsive .dropdown-content {position: relative;}
+      .topnav.responsive .dropdown .dropbtn {
+        display: block;
+        width: 100%;
+        text-align: left;
+      }
+    }
+
+    *{
+        margin: 0;
+        padding: 0;
+        border: 0;
+        font-weight: 100;
+        font-family: 'Open Sans', sans-serif;
+    }
+
+
+
+
+
+
+    .backdiv1 {
+        height: 100vh;
+        width: 100%;
+        display: flex;
+        background: url(https://storage.googleapis.com/derswebsitebucket/Backgrounds/operalean.jpg);
+        background-size: cover;
+        z-index: 900;
+    }
+
+    .backdiv2 {
+        height: 100vh;
+        width: 100%;
+        display: flex;
+        background: url(https://storage.googleapis.com/derswebsitebucket/Backgrounds/ushanka.jpg);
+        background-size: cover;
+        z-index: 900;
+    }
+
+    .leftdiv {
+        width: 50%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        z-index: 901;
+        flex-direction: column;
+    }
+    .rightdiv {
+        width: 50%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        z-index: 955;
+    }
+
+    .resumeholder {
+        height: 80vh;
+        width: auto;
+    }
+
+    .downloadbutton {
+        text-decoration: none;
+        color: white;
+        font-size: 2vw;
+        margin-top: 20px;
+        transition: .7s;
+    }
+    .downloadbutton:hover {
+        color: rgb(255, 159, 197);
+    }
+
+    @media screen and (max-width: 600px) {
+        .rightdiv {
+            display: none;
+        }
+        .leftdiv {
+            width: 100%;
+            align-items:center;
+        }
+        .resumeholder {
+            height: 50vh;
+        }
+        .downloadbutton {
+            font-size: 5vw;
+        }
+    }
