--- a/(pages)re.css
+++ b/(pages)re.css
@@ -29,6 +29,13 @@ body {
     background-size: cover;
     overflow: auto;
   }
+  .mainbody6 {
+    background-image: url(https://storage.googleapis.com/derswebsitebucket/Backgrounds/drink.jpg);
+    background-attachment:fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    overflow: auto;
+  }
   /*NavBAR*/
   .topnav {
       background-color: #000000;
@@ -192,6 +199,15 @@ body {
         z-index: 900;
     }
 
+
+    .backdiv4 {
+      height: 100vh;
+      width: 100%;
+      display: flex;
+      background: url(https://storage.googleapis.com/derswebsitebucket/Backgrounds/drink.jpg);
+      background-size: cover;
+      z-index: 900;
+  }
     .leftdiv {
         width: 50%;
         height: 100%;
@@ -262,6 +278,20 @@ body {
         width: 100%;
         text-align: center;
     }
+    .imgtextin {
+      font-size: 5vw;
+      color: white;
+      width: 100%;
+      text-align: center;
+      margin-left: 150px;
+  }
+  .imgtextin2 {
+    font-size: 2vw;
+    color: white;
+    width: 100%;
+    text-align: center;
+    margin-left: 150px;
+}
     .imgtitle2 {
       font-size: 2vw;
         color: white;
@@ -342,5 +372,11 @@ body {
       }
       .imgholder9{
         height: 8vh;
+      }
+      .imgtextin{
+        margin-left: 0px;
+      }
+      .imgtextin2{
+        margin-left: 0px;
       }
     }
